# tap-treez

./: .gitignore  README.md  pull_request_template.md  pyproject.toml  setup.py
.circleci/: config.yml
tap_treez/: __init__.py  client.py  discovery.py  endpoints.py  service.py  streams.py  sync.py
tap_treez/schemas/: customers.json  products.json  tickets.json
tests/: test_client.py  test_endpoints.py  test_service.py  test_streams.py
